# alternating-optimization-lora

./: .gitattributes  .gitignore  ARTIFACTS.md  README.md  README_beginner_guide.md  pyproject.toml  reproduce.sh  requirements.txt  todo.md
altopt/: __init__.py  als.py  deepspeed_engine.py  framework.py  lora.py  model_utils.py  peft_bridge.py  perturbation.py  sgd.py  trainer.py
configs/: README.md
docs/: algorithm_math.md  alignment_audit.md  alignment_audit_phase_b.md  als-residual-amplification.md  als_block_solving_explained.md  asp_mathematical_formulation.md  causal_depth_boundary.md  claims-audit.md  experiment-registry.md  experiment-report-002.md  experiment-report-005.md  experiment-report.md  final-analysis-phase-b-and-depth-boundary.md  final_alignment_8.8.md  final_assessment.md  framework.md  knowledge_index.md  literature.md  math-analysis.md  problem_statement.md  progress_report.md  protocols_deep_dive.md  submission_guide.md  weekly_group_meeting_20260724.pptx  weekly_group_meeting_20260724_en.pptx  why-protocol-a-fails-on-7b.md
experiments/: _a_kd_05b.py  _a_sst2.py  _a_sync_05b_8cycle.py  _a_sync_32cycle_7b.py  _a_sync_48cycle_7b.py  _a_sync_8cycle_7b.py  _a_sync_config_bc.py  _a_sync_constant_7b.py  _a_sync_noperturb_7b.py  _a_sync_plus_7b.py  _a_sync_plus_variants.py  _apply_review_changes.py  _auto_p1.sh  _cross_arch_validation.py  _crossover.py  _dual_and_extended.py  _eval_full_test.py  _eval_seed456.py  _falsify.py  _finalize.py  _finalize.sh  _finalize2.py  _finalize3.py  _gen_weekly_ppt.py  _go.sh  _go_eval.sh  _lars_qwen05b.py  (+24 more)
(+50 files in other folders)
